--- a/source/files/styles/partials/_base.scss
+++ b/source/files/styles/partials/_base.scss
@@ -33,7 +33,7 @@ body {
 	color: $gray8;
 	background: $milk;
 	min-height: 100%;
-	text-rendering: optimizeLegibility;
+	/* text-rendering: optimizeLegibility;  This broke on small caps with Google Chrome update*/
 }
 
 a {
